2007-06-26  Akim Demaille  <demaille@gostai.com>

	YieldExp
	* src/ast/ast.yml (YieldExp): New.
	Complete a few printers.
	* src/ast/all.hh: Adjust.
	* src/parser/bison/ugrammar.y: Use it.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	Fix dependencies
	* src/ast/Makefile.am (ast.stamp): Rename as...
	(nodes.stamp): this, to match the generator name.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	Fix operator << generation
	* dev/ast-pretty-printer-gen: Put it in the ast namespace.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	Fix warnings
	* dev/ast.py: "default" is a valid Node attribute.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	Finish the pretty printer
	* dev/ast-pretty-printer-gen: Provide a ctor and dtor.
	(PrettyPrinter::ostr_): Let it be a reference.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	More AST generation
	* dev/ast-default-visitor-gen: New.
	* dev/ast-pretty-printer-gen: Fix some errors.
	Don't output a pretty printing rule if there is none.
	Derive from the default visitor rather than the (empty) visitor.
	Provide an operator<<.
	* src/ast/Makefile.am: Factor the generation rules using %-rules.
	* src/ast/all.hh: Include pretty-printer.hh.
	* src/ast/ast.yml: More doc.
	* src/ast/default-visitor.hh, src/ast/default-visitor.hxx: Remove.
	Now generated.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	delete globalDelete
	* src/userver.cc, src/parser/bison/ugrammar.y (globalDelete):
	Remove.
	Also, comment changes.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	Merge command and statement into stmt
	* src/parser/bison/ugrammar.y (statement, command): Merge into...
	(stmt): this.
	(commands): Rename as...
	(stmts): this.
	(TOK_EXPRBLOCK, EXPRBLOCK): Remove, unused.

2007-06-26  Akim Demaille  <demaille@gostai.com>

	merge -r 1187:1189 https://svn.gostai.com/svn/kernel1/trunk

	2007-06-26  Akim Demaille  <demaille@gostai.com>
	Remove dead token
	* src/parser/bison/ugrammar.y (TOK_CMDBLOCK): Remove.
